--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "chart.js": "^4.1.1",
     "cluster": "^0.7.7",
+    "express": "^4.18.2",
     "fast-csv": "^4.3.6",
     "os": "^0.1.2",
     "puppeteer": "^19.4.1",
-    "puppeteer-cluster": "^0.23.0"
+    "puppeteer-cluster": "^0.23.0",
+    "synonyms": "^1.0.1"
   },
   "type": "module"
 }
